--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="#About">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#Menu">Menu</a>
+                <a class="nav-link" href="./html/menu.html">Menu</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#Cart">Cart</a>
@@ -55,7 +55,7 @@
                      error pariatur. Culpa quos consequatur dolores sapiente.</p>
                      <br>
                      <br>
-                    <a href="#">Menu</a>
+                    <a href="./html/menu.html">Menu</a>
                     
             </div>
             <div class="col text-center">
@@ -68,15 +68,72 @@
       <br>
       <br>
       <section id="About"></section>
+      <div class="container">
+        <div class="row">
+            <div class="col text-center">
+                <img src="https://i.postimg.cc/t46tvYkX/65519ed726bad9a73f471569a227f0e0.jpg" alt="">
+            </div>
+            <div class="col text-center">
+                <br>
+                <br>
+                <h3>About us</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero, obcaecati? 
+                    Ex mollitia doloremque culpa quis ratione, architecto suscipit consequatur. 
+                    Ratione ea repellendus quod eligendi quae veniam hic laboriosam, natus vel?
+                </p>
+            </div>
+        </div>
+        <!-- second row -->
+        <div class="row">
+            <div class="col text-center">
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero, obcaecati? 
+                    Ex mollitia doloremque culpa quis ratione, architecto suscipit consequatur. 
+                    Ratione ea repellendus quod eligendi quae veniam hic laboriosam, natus vel?
+                </p>
+            </div>
+            <div class="col text-center">
+                <img src="https://i.postimg.cc/KcCYq1Ff/987d92558c0659975357382316c31a71.jpg" alt="">
+            </div>
+        </div>
+      </div>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+   
       <section id="Specials">
         <center><h2>Today's Specials</h2></center>
+        <br>
+        <br>
+        <br>
         <div class="specials">
            
         </div>
       </section>
-      <section id="Menu">
+      <section id="Menu"></section>
+      <center>
+        <h2>Menu</h2>
+      </center>
+      <div class="menu_nav">
+        <button class="meals" onclick="meals()">Meals</button>
+        <button class="drinks">Drinks</button>
+        <button class="deserts">Deserts</button>
+        <button class="starters">Starters</button>
+    </div>
 
-      </section>
+   
+    <!-- where the product shoes -->
+    <div class="display_products">
+
+    </div>
+
     <!-- js -->
     <script src="./script/script.js"></script>
 </body>
