--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Foodiefanatix</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg" style="position: fixed; top: 0;">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Foodiefanatix</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,7 +34,7 @@
                 <a class="nav-link" href="#menu">Menu</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#Cart">Cart</a>
+                <a class="nav-link" href="#Cart">Cart <span class="count">0</span></a>
               </li>
             </ul>
          
