--- a/index.html
+++ b/index.html
@@ -127,10 +127,14 @@
         <h2>Menu</h2>
       </center>
       <div class="menu_nav">
-        <a href="#starters"><button class="starters">Starters</button></a>
-        <a href="#drinks"><button class="drinks">Drinks</button></a>
-        <a href="#meals"><button class="meals">Meals</button></a>
-        <a href="#deserts"><button class="deserts">Deserts</button></a>
+        <a href="#starters"><button class="starters">Starters <br>
+          <span class="icon"><img src="https://i.postimg.cc/DwWJS0qn/starters.png" alt=""></span></button></a>
+        <a href="#drinks"><button class="drinks">Drinks <br>
+          <span class="icon"><img src="https://i.postimg.cc/MphcVwDR/drink.png" alt=""></span></button></a>
+        <a href="#meals"><button class="meals">Meals <br>
+          <span class="icon"><img src="https://i.postimg.cc/nchQt0rs/meal.png" alt=""></span></button></a>
+        <a href="#deserts"><button class="deserts">Deserts <br>
+          <span class="icon"><img src="https://i.postimg.cc/c4kt1wtF/cake.png" alt=""></span></button></a>
        
     </div>
 
